# rpa-studio

./: .gitignore  BUILDING.md  KILAVUZ.md  README.md  TUTORIAL.md  project_handoff.md  pyproject.toml
rpa_framework/: CLAUDE.md  KILAVUZ.md  LINUX.md  README.md  TUTORIAL.md  __init__.py  directives.py  requirements-linux.txt  requirements.txt  run.py  runner_app.py  scripting.py
rpa_framework/compat/: __init__.py  sikuli.py
rpa_framework/core/: __init__.py  exceptions.py
rpa_framework/core/inspector/: __init__.py  __main__.py  base.py  daemon.py  linux_inspector.py  windows_inspector.py
rpa_framework/core/os_facade/: __init__.py  base.py  linux_backend.py  windows_backend.py
rpa_framework/core/vision/: __init__.py  feature_matcher.py  ocr_engine.py  ui_detector.py  ui_finder.py
rpa_framework/examples/: ai_elements.py  find_on_screen.py  hello_flow.py  notepad_typing.py  read_screen_text.py  spy_under_cursor.py
rpa_framework/examples/hello.sikuli/: hello.py
rpa_framework/ide/: __init__.py  app.py  capture.py  directives.py  editor.py  engine.py  highlighter.py  panels.py  qt_shim.py  runner.py  theme.py
rpa_framework/packaging/: __init__.py  __main__.py  build.py  nuitka_flags.py  offline.py  runtime_paths.py
scripts/: build_linux.sh  build_windows.ps1
